--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     command: celery -A galleries worker -l info
     depends_on:
       - postgres
-      - rabbitmq
+      - rabbitmqls
       - web
     volumes:
      - media:/app/media
