--- a/galleries_app/Dockerfile
+++ b/galleries_app/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.6-alpine
-ADD . /app
+ADD /galleries_app /app
+ADD /sa_helper /sa_helper
 WORKDIR /app
 RUN apk add build-base python-dev py-pip jpeg-dev zlib-dev postgresql-dev musl-dev
 ENV LIBRARY_PATH=/lib:/usr/lib DJANGO_SETTINGS_MODULE=galleries.settings_docker
