--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,18 @@ services:
     volumes:
      - media:/app/media
      - sessions:/app/sessions
+
+  catalogues:
+    build:
+      context: .
+      dockerfile: catalogues_app/Dockerfile
+    ports:
+     - "8001:8001"
+    expose:
+     - "8001"
+    depends_on:
+     - postgres
+
   celery:
     build:
       context: .
@@ -31,6 +43,9 @@ services:
 
   postgres:
     image: "postgres:alpine"
+
+  memcached:
+    image: "memcached:alpine"
 
 volumes:
   media:
